# AI_Audio_Detection

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TESTING.md  ai_audio_detector.py  config.yaml  example_usage.py  fix_formatting.py  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  setup.py  setup_testing.py
.github/workflows/: ci.yml
ai_audio_detector/: __init__.py
docs/: PUBLISHING.md
tests/: benchmark.py
